<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNote"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/backArr"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/back_arrow"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorIcons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/doneArr"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/donebtn_bg"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/done_arrow"
            app:tint="@color/colorIcons"
            app:layout_constraintBottom_toBottomOf="@+id/backArr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/backArr"/>

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/note_title"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTxtHint"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@id/backArr"/>

        <TextView
            android:id="@+id/noteDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@id/noteTitle"
            app:layout_constraintStart_toStartOf="@id/noteTitle"
            app:layout_constraintTop_toBottomOf="@id/noteTitle"/>

        <EditText
            android:id="@+id/noteSubtitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_medium"
            android:hint="@string/note_subtitle"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textColor="@color/colorTxtSubtitle"
            android:textColorHint="@color/colorTxtHint"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/noteSubIndication"
            app:layout_constraintTop_toBottomOf="@id/noteDateTime"/>


        <View
            android:id="@+id/noteSubIndication"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@drawable/bg_subss"
            app:layout_constraintBottom_toBottomOf="@id/noteSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/noteSubtitle"/>

        <EditText
            android:id="@+id/noteMainDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/type_here"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:minHeight="@dimen/_100sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTxtHint"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteSubtitle"/>

        <ImageView
            android:id="@+id/micButton"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/mic_icon"
            app:layout_constraintEnd_toEndOf="@+id/noteMainDesc"
            app:layout_constraintTop_toBottomOf="@id/noteSubtitle"
            app:tint="@color/colorWhite"
            android:layout_marginTop="@dimen/_17sdp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_colors"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>