<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutColorsMain"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_colors"
    app:behavior_peekHeight = "@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/ColorCardText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/colors"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"/>

    <LinearLayout
        android:id="@+id/layoutNoteColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/Color1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_note_color1"/>
            
            <ImageView
                android:id="@+id/ImgColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/done_arrow"
                app:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/Color2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_note_color2"/>

            <ImageView
                android:id="@+id/ImgColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/Color3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_note_color3"/>

            <ImageView
                android:id="@+id/ImgColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/Color4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_note_color4"/>

            <ImageView
                android:id="@+id/ImgColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/Color5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_note_color5"/>

            <ImageView
                android:id="@+id/ImgColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite" />
        </FrameLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_color"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutDelete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal">
        
        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/delete_icon"
            app:tint="@color/deleteColor" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/deleteColor"
            android:textSize="@dimen/_12ssp"/>
    </LinearLayout>

</LinearLayout>